src/test/valid/custom/impParamUnOpOrd.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(x) is
    int a = ord x ;
    return 0 
  end
  println 0
end
