src/test/invalid/semanticErr/extensionTests/classes/classDeclarationInvalidConstructor.wacc
# Type of attribute is preserved inside of constructor

begin
  int f() is
    return 1
  end

  class Car() is
    int speed;

    Car(char s) is
      speed = s
    end

    int getSpeed() is
      return speed
    end
  end

  int x = call f();
  println x
end
